<resources>
    <string name="app_name">JustParkIt</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_analytic">Analytic</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sing_in">Sing In</string>

    <string name="dark_theme_switch">Dark theme</string>
    <string name="sign_in_button">Sing in</string>
</resources>
