<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_analytic"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_analytic" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_sing_in"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu_sing_in" />
    </group>

</menu>
