<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.pominova.justparkit.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.pominova.justparkit.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_analytic"
        android:name="com.pominova.justparkit.ui.analytic.AnalyticFragment"
        android:label="@string/menu_analytic"
        tools:layout="@layout/fragment_analytic" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.pominova.justparkit.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_sing_in"
        android:name="com.pominova.justparkit.ui.authorization.AuthorizationFragment"
        android:label="@string/menu_sing_in"
        tools:layout="@layout/fragment_sing_in" />

</navigation>